pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/Pardot_Form_Completion__c.object-meta.xml
<CustomObject>
    <label>Pardot Form Completion</label>
    <nameField>
        <label>Pardot Form Completion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pardot Form Completions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>