pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Contact)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pardot Form Completions (Account (Contact))</relationshipLabel>
    <relationshipName>Pardot_Form_Completions1</relationshipName>
    <type>Lookup</type>
</CustomField>