pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Account_Lead__c.field-meta.xml
<CustomField>
    <fullName>Account_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (Lead)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Pardot Form Completions</relationshipLabel>
    <relationshipName>Pardot_Form_Completions</relationshipName>
    <type>Lookup</type>
</CustomField>