pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <formula>IF(
CONTAINS(TEXT(Form_Name__c), &quot;Lexology&quot;), &quot;Lexology&quot;,
IF(CONTAINS(TEXT(Form_Name__c), &quot;GAR&quot;), &quot;GAR&quot;,
IF(CONTAINS(TEXT(Form_Name__c), &quot;GCR&quot;), &quot;GCR&quot;,
IF(CONTAINS(TEXT(Form_Name__c), &quot;GIR&quot;), &quot;GIR&quot;,
IF(CONTAINS(TEXT(Form_Name__c), &quot;GRR&quot;), &quot;GRR&quot;,
IF(CONTAINS(TEXT(Form_Name__c), &quot;GDR&quot;), &quot;GDR&quot;,
IF(CONTAINS(TEXT(Form_Name__c), &quot;Latin Lawyer&quot;), &quot;Latin Lawyer&quot;,
IF(CONTAINS(TEXT(Form_Name__c), &quot;GBRR&quot;), &quot;GBRR&quot;,
IF(CONTAINS(TEXT(Form_Name__c), &quot;IAM&quot;), &quot;IAM&quot;,
IF(CONTAINS(TEXT(Form_Name__c), &quot;WTR&quot;), &quot;WTR&quot;,
&quot;Other&quot;))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand</label>
    <type>Text</type>
</CustomField>