pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Clay_Routed__c.field-meta.xml
<CustomField>
    <fullName>Clay_Routed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this form completion record was created or routed via Clay Labs automation. Used for attribution, reporting, and tracking automated inbound lead flows across Pardot and Salesforce.</description>
    <inlineHelpText>Checked when this form completion is associated with a Clay-routed lead or process. Automatically populated. Do not edit manually.</inlineHelpText>
    <label>Clay Routed</label>
    <type>Checkbox</type>
</CustomField>