pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>IF(ISBLANK(Contact__c),  Lead__r.Company,  Contact__r.Account.Name)</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>