pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pardot Form Completions</relationshipLabel>
    <relationshipName>Pardot_Form_Completions</relationshipName>
    <type>Lookup</type>
</CustomField>