pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Converted_to_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Opportunity__c</fullName>
    <formula>IF(
ISBLANK(Opportunity__c) = TRUE, FALSE, TRUE 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted to Opportunity</label>
    <type>Checkbox</type>
</CustomField>