pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>IF(ISBLANK(Contact__c),  Lead__r.Country ,  Contact__r.Account.BillingCountry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Prospect is a Contact, then the Country is the Account&apos;s Billing Country</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>