pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Evaluate__c.field-meta.xml
<CustomField>
    <fullName>Evaluate__c</fullName>
    <formula>IF( TEXT(Opportunity__r.StageName) = &quot;Evaluate&quot;, 1, 0)</formula>
    <label>Evaluate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>