pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/LBR_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>LBR_Legal_Entity__c</fullName>
    <formula>CASE( Sales_Rep__r.LBR_Legal_Entity__c,
&quot;Law Business Research (UK) Ltd.&quot;, &quot;UK&quot;,
&quot;Law Business Research (Asia) Ltd.&quot;, &quot;Asia&quot;,
&quot;Law Business Research LLC&quot;, &quot;US&quot;,
&quot;Unknown&quot;


)</formula>
    <inlineHelpText>LBR Legal Entity of the Sales Rep assigned to the Form Completion</inlineHelpText>
    <label>LBR Legal Entity</label>
    <type>Text</type>
</CustomField>