pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Next_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Contact_Date__c</fullName>
    <description>This field is used to manage the next contact date for the Pardot form completion record.</description>
    <label>Next Contact Date</label>
    <type>Date</type>
</CustomField>