pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Prospect_s_Region__c.field-meta.xml
<CustomField>
    <fullName>Prospect_s_Region__c</fullName>
    <formula>IF(ISBLANK(Contact__c),  Lead__r.Sub_Region__c  ,  Contact__r.Mailing_Sub_Region__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect&apos;s Region</label>
    <type>Text</type>
</CustomField>