pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Reason_Disqualified__c.field-meta.xml
<CustomField>
    <fullName>Reason_Disqualified__c</fullName>
    <label>Reason Disqualified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Can’t afford</fullName>
            </value>
            <value>
                <fullName>Duplicate Enquiry</fullName>
            </value>
            <value>
                <fullName>Duplicate Scored Lead</fullName>
            </value>
            <value>
                <fullName>Existing customer</fullName>
            </value>
            <value>
                <fullName>Existing Opportunity</fullName>
            </value>
            <value>
                <fullName>Form – Inbound Enquiry</fullName>
            </value>
            <value>
                <fullName>Form – Sales Initiated</fullName>
            </value>
            <value>
                <fullName>Invalid Contact Information</fullName>
            </value>
            <value>
                <fullName>Moved Company</fullName>
            </value>
            <value>
                <fullName>No Budget Authority</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Not ICP – Company Size</fullName>
            </value>
            <value>
                <fullName>Not ICP – Industry</fullName>
            </value>
            <value>
                <fullName>Not ICP – Job Title</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product/service gap</fullName>
            </value>
            <value>
                <fullName>Student enquiry</fullName>
            </value>
            <value>
                <fullName>Test/Invalid enquiry</fullName>
            </value>
            <value>
                <fullName>Too Early / Not Ready</fullName>
            </value>
            <value>
                <fullName>Wrong Job Function</fullName>
            </value>
            <value>
                <fullName>Duplicate Scored Lead</fullName>
                <isActive>false</isActive>
                <label>Duplicate Scored Lead</label>
            </value>
            <value>
                <fullName>Existing Opportunity</fullName>
                <isActive>false</isActive>
                <label>Existing Opportunity</label>
            </value>
            <value>
                <fullName>Form – Inbound Enquiry</fullName>
                <isActive>false</isActive>
                <label>Form – Inbound Enquiry</label>
            </value>
            <value>
                <fullName>Form – Sales Initiated</fullName>
                <isActive>false</isActive>
                <label>Form – Sales Initiated</label>
            </value>
            <value>
                <fullName>No Budget Authority</fullName>
                <isActive>false</isActive>
                <label>No Budget Authority</label>
            </value>
            <value>
                <fullName>Not ICP – Company Size</fullName>
                <isActive>false</isActive>
                <label>Not ICP – Company Size</label>
            </value>
            <value>
                <fullName>Not ICP – Industry</fullName>
                <isActive>false</isActive>
                <label>Not ICP – Industry</label>
            </value>
            <value>
                <fullName>Not ICP – Job Title</fullName>
                <isActive>false</isActive>
                <label>Not ICP – Job Title</label>
            </value>
            <value>
                <fullName>Price too high</fullName>
                <isActive>false</isActive>
                <label>Price too high</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>