pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pardot_Form_Completions</relationshipName>
    <type>Lookup</type>
</CustomField>