pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/recordTypes/Events_Sponsorship.recordType-meta.xml
<RecordType>
    <fullName>Events_Sponsorship</fullName>
    <active>true</active>
    <label>Events Sponsorship</label>
</RecordType>