pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/recordTypes/Form_Completion.recordType-meta.xml
<RecordType>
    <fullName>Form_Completion</fullName>
    <active>true</active>
    <description>Records created via Pardot Form Completions</description>
    <label>Form Completion</label>
</RecordType>