pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/recordTypes/Marketing_Services.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Services</fullName>
    <active>true</active>
    <label>Marketing Services</label>
</RecordType>