pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/recordTypes/Scored_Leads.recordType-meta.xml
<RecordType>
    <fullName>Scored_Leads</fullName>
    <active>true</active>
    <description>Cognism leads from the TAM project, been nurtured and scored by marketing through Pardot</description>
    <label>Scored Leads</label>
</RecordType>