pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>NAME</columns>
    <columns>Prospect_Name__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Country__c</columns>
    <columns>Sales_Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Law.com - events sponsorship</value>
    </filters>
    <label>All</label>
</ListView>