pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/listViews/Copy_of_Nina_Open_Forms.listView-meta.xml
<ListView>
    <fullName>Copy_of_Nina_Open_Forms</fullName>
    <columns>LAST_ACTIVITY</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Prospect_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Country__c</columns>
    <columns>Sales_Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Stage__c</field>
        <operation>equals</operation>
        <value>New,Working,Nurturing</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Machin</value>
    </filters>
    <label>Sam Machin Forms</label>
</ListView>