pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/listViews/GDR_Leads.listView-meta.xml
<ListView>
    <fullName>GDR_Leads</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Sales_Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>GDR</value>
    </filters>
    <label>GDR Leads</label>
</ListView>