pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/listViews/IAM_Market_Enquiries_John_Eborall.listView-meta.xml
<ListView>
    <fullName>IAM_Market_Enquiries_John_Eborall</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Name__c</columns>
    <columns>Company__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Sales_Stage__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity_Close_Date__c</columns>
    <columns>Country__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>IAM Market</value>
    </filters>
    <filters>
        <field>Sales_Stage__c</field>
        <operation>notEqual</operation>
        <value>Disqualified</value>
    </filters>
    <label>IAM Market Enquiries - John Eborall</label>
</ListView>