pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/listViews/IP_Team_Unassigned_Leads.listView-meta.xml
<ListView>
    <fullName>IP_Team_Unassigned_Leads</fullName>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Country__c</columns>
    <columns>Prospect_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Company__c</columns>
    <columns>Sales_Stage__c</columns>
    <columns>Organisation_Type__c</columns>
    <columns>Job_Role__c</columns>
    <columns>Job_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>IAM,WTR</value>
    </filters>
    <filters>
        <field>Sales_Stage__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notContain</operation>
        <value>Lexology,IAM Market</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>B2BMA</value>
    </filters>
    <label>IP Team Unassigned Leads</label>
</ListView>