pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/listViews/Mateusz_Carl_CL_Pardots_2023.listView-meta.xml
<ListView>
    <fullName>Mateusz_Carl_CL_Pardots_2023</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Carl</value>
    </filters>
    <filters>
        <field>Sales_Stage__c</field>
        <operation>equals</operation>
        <value>Disqualified</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>GAR</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <label>GAR CL - Carl to Mateusz - Pardot Forms</label>
</ListView>