pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/listViews/MATEUSZ_GAR_OLD_ENQUIRIES.listView-meta.xml
<ListView>
    <fullName>MATEUSZ_GAR_OLD_ENQUIRIES</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Company__c</columns>
    <columns>Country__c</columns>
    <columns>Sales_Stage__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>equals</operation>
        <value>GAR</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>Carl</value>
    </filters>
    <filters>
        <field>Prospect_Name__c</field>
        <operation>startsWith</operation>
        <value>L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z</value>
    </filters>
    <label>MATEUSZ - GAR OLD ENQUIRIES</label>
</ListView>