pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/listViews/Nina_Need_to_be_Disqualified.listView-meta.xml
<ListView>
    <fullName>Nina_Need_to_be_Disqualified</fullName>
    <columns>LAST_ACTIVITY</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Prospect_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Job_Title__c</columns>
    <columns>Country__c</columns>
    <columns>Sales_Stage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Stage__c</field>
        <operation>equals</operation>
        <value>New,Working</value>
    </filters>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Nina</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessOrEqual</operation>
        <value>9/1/2024 12:00 AM</value>
    </filters>
    <label>Nina Need to be Disqualified</label>
</ListView>