pfc-triage-cockpit/fulluat-patch/objects/Pardot_Form_Completion__c/listViews/Oli_Carl_CL_Pardots.listView-meta.xml
<ListView>
    <fullName>Oli_Carl_CL_Pardots</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Name__c</columns>
    <columns>Company__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Country__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.FIRST_NAME</field>
        <operation>equals</operation>
        <value>Carl</value>
    </filters>
    <filters>
        <field>Sales_Stage__c</field>
        <operation>equals</operation>
        <value>Disqualified</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>GCR</value>
    </filters>
    <label>Oli - Carl CL Pardots</label>
</ListView>